{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 105,
  "lineage": "a367ee6d-57b1-93b1-b1f3-c83c34f2155c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/instanceGroups/apache-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/instanceGroups/nginx-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-02-21T15:01:57.656-08:00",
            "enable_cdn": false,
            "fingerprint": "rtiqQOpG_VU=",
            "generated_id": 4956501440726534026,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/httpHealthChecks/http-health-check"
            ],
            "id": "projects/test-dev-485716/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "test-dev-485716",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_http_health_check.default",
            "google_compute_instance.vm_apache",
            "google_compute_instance.vm_nginx",
            "google_compute_instance_group.apache_group",
            "google_compute_instance_group.nginx_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-21T15:47:08.061-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-dev-485716/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "priority": 1000,
            "project": "test-dev-485716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "20",
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-21T15:00:52.801-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-dev-485716/global/firewalls/allow-http-ssh",
            "log_config": [],
            "name": "allow-http-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "priority": 1000,
            "project": "test-dev-485716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/firewalls/allow-http-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-21T15:47:08.137-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-dev-485716/global/firewalls/allow-ssh-via-iap",
            "log_config": [],
            "name": "allow-ssh-via-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "priority": 1000,
            "project": "test-dev-485716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/firewalls/allow-ssh-via-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/test-dev-485716/global/forwardingRules/http-content-rule",
            "ip_address": "136.110.201.215",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "test-dev-485716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance.vm_apache",
            "google_compute_instance.vm_nginx",
            "google_compute_instance_group.apache_group",
            "google_compute_instance_group.nginx_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public_subnet",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260218",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/disks/vm-apache"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test-dev-485716/zones/europe-west1-b/instances/vm-apache",
            "instance_id": "433703751924549543",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDnrcKO7UmrW1+4aNJ3KDGnOpL+E3CB9LmQ3cXAFM/+xa1AV6WMMx4R5eeo9LEgpRAhTuiXBMXMVz11wy2flDItyb6Hk0DApeD2r+uICKQxQbTnV9HGk0Af8EcJ72LHCSfR0BL7CWWm10Qg2Xj7F2j/glpWQJCIueyDP6Y3NMPeA/PLu8bbub4h8Q1Yhmqqy4ap4idHkeWIuU56QJcPFspBoaByplW9Sd7dyGVSFkF6w6oS+tifbTvnP5l1JZNfi58i7G6JJq28D3UVdQPu2vI6UPMaRse2aDys2/8+nrWsBihINCBMWazUdn/+q97QKYqY3nC8LQLIeG8dEVtbWCtA+J2/DxQuNAQ0bMjKDMZgBFFK/65YlQ8mjWSRpLY0V8KhqMG6IZWEwRN5dDawFNtOFXb32AO5BTEmNZ4HM6lFz [...]
            },
            "metadata_fingerprint": "_5Y7qn4zRck=",
            "name": "vm-apache",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.154.102",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/regions/europe-west1/subnetworks/public-subnet",
                "subnetwork_project": "test-dev-485716"
              }
            ],
            "project": "test-dev-485716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/instances/vm-apache",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260218",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/disks/vm-nginx"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test-dev-485716/zones/europe-west1-b/instances/vm-nginx",
            "instance_id": "5499397019316750247",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDnrcKO7UmrW1+4aNJ3KDGnOpL+E3CB9LmQ3cXAFM/+xa1AV6WMMx4R5eeo9LEgpRAhTuiXBMXMVz11wy2flDItyb6Hk0DApeD2r+uICKQxQbTnV9HGk0Af8EcJ72LHCSfR0BL7CWWm10Qg2Xj7F2j/glpWQJCIueyDP6Y3NMPeA/PLu8bbub4h8Q1Yhmqqy4ap4idHkeWIuU56QJcPFspBoaByplW9Sd7dyGVSFkF6w6oS+tifbTvnP5l1JZNfi58i7G6JJq28D3UVdQPu2vI6UPMaRse2aDys2/8+nrWsBihINCBMWazUdn/+q97QKYqY3nC8LQLIeG8dEVtbWCtA+J2/DxQuNAQ0bMjKDMZgBFFK/65YlQ8mjWSRpLY0V8KhqMG6IZWEwRN5dDawFNtOFXb32AO5BTEmNZ4HM6lFz [...]
            },
            "metadata_fingerprint": "_5Y7qn4zRck=",
            "name": "vm-nginx",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/regions/europe-west1/subnetworks/private-subnet",
                "subnetwork_project": "test-dev-485716"
              }
            ],
            "project": "test-dev-485716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/zones/europe-west1-b/instances/vm-nginx",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-dev-485716/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test-dev-485716",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-21T15:47:08.249-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/test-dev-485716/regions/europe-west1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "project": "test-dev-485716",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/regions/europe-west1/routers/nat-router",
            "timeouts": {
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "test-dev-485716/europe-west1/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "test-dev-485716",
            "region": "europe-west1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "timeouts": {
            },
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-21T15:00:53.480-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/test-dev-485716/regions/europe-west1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-dev-485716",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/regions/europe-west1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-21T15:00:53.029-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/test-dev-485716/regions/europe-west1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-dev-485716",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/regions/europe-west1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-21T15:03:00.308-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/test-dev-485716/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "test-dev-485716",
            "proxy_bind": false,
            "proxy_id": 4988439264216188747,
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/urlMaps/web-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance.vm_apache",
            "google_compute_instance.vm_nginx",
            "google_compute_instance_group.apache_group",
            "google_compute_instance_group.nginx_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public_subnet",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-21T15:02:49.070-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "p0jJNvF5o4E=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/test-dev-485716/global/urlMaps/web-map",
            "map_id": 2755687063553017718,
            "name": "web-map",
            "path_matcher": [],
            "project": "test-dev-485716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-dev-485716/global/urlMaps/web-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance.vm_apache",
            "google_compute_instance.vm_nginx",
            "google_compute_instance_group.apache_group",
            "google_compute_instance_group.nginx_group",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    }
  ]
}